<resources>
    <string name="app_name">Practica #6</string>
    <string name="action_settings">Settings</string>
    <string name="title">Practica de Android #6</string>
    <string name="sub">Practica Aula #1</string>
    <string name="sub2">Practica Aula #2</string>
    <string name="sub3">Practica Aula #3</string>
    <string name="sub4">Practica Aula #4</string>
    <string name="sub5">Practica laboratorio #1</string>
    <string name="sub6">Practica laboratorio #2</string>
    <string name="sub7">Practica laboratorio #3</string>
    <string name="sub8">Practica laboratorio #4</string>
    <string name="boton">Calcular</string>
</resources>
